hard-gists/1969d4648458cf876af92b3507856d70/run.log
=== Docker Run Log for 1969d4648458cf876af92b3507856d70 ===
Started at: Mi 29. Okt 12:35:50 CET 2025

[2025-10-29 12:35:51] START: Running container for 1969d4648458cf876af92b3507856d70
[2025-10-29 12:35:51] SUCCESS: Container eed45101c2122bc4b8bce36def0355169e623b1557b7d5dae13d2ca5431f868b started for 1969d4648458cf876af92b3507856d70
=== Container logs for 1969d4648458cf876af92b3507856d70 ===
  File "/snippet.py", line 16
    print 'name: "%s"'%model.name
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1969d4648458cf876af92b3507856d70 ===
[2025-10-29 12:35:53] INFO: Container eed45101c2122bc4b8bce36def0355169e623b1557b7d5dae13d2ca5431f868b has stopped
